--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "author": "Chien-Fu Chen <chienfuchen32@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.15.3",
+    axios": ">=0.21.1",
     "konva": "^1.2.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-konva": "^1.1.1",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "^0.63.2",
-    "socket.io": "^1.7.2"
+    "socket.io": ">=2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -30,6 +30,6 @@
     "html-webpack-plugin": "^2.24.1",
     "react-hot-loader": "^1.3.1",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
